[package]
name = "crs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.4"
anyhow = "^1.0"
thiserror = "^1.0"
http = "^0.2"
serde_json = "^1.0"

[dependencies.diesel]
version = "^1.4"
features = ["mysql", "extras"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.chrono]
version = "^0.4"
features = ["serde"]
